--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -29,8 +29,8 @@
   <meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  {{/*  SVG favicon for the modern web  */}}
-  <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg">
+  <!-- {{/*  SVG favicon for the modern web  */}} -->
+  <!-- <link rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg"> -->
 
   {{/*  Katex support (enabled on on specific pages). See 'helpers/katex.html' for more info.   */}}
 
